--- a/notes/250202.md
+++ b/notes/250202.md
@@ -50,3 +50,45 @@ $\text{int}(\sqrt{6}) \approx 2$
 
 - 6 / 2 = ??
 - 6 / 3 (안해도됨)
+
+---
+
+82166370484403199890008895243450658541227588666881
+
+| 8 | 2 | 1 | 6 | 6 | 3 | 7 | 0 | 4 | 8 |
+|---|---|---|---|---|---|---|---|---|---|
+| x | x | x | x |   |   |   |   |   |   |
+|   | x | x | x | x |   |   |   |   |   |
+|   |   | x | x | x | x |   |   |   |   |
+|   |   |   | x | x | x | x |   |   |   |
+|   |   |   |   | x | x | x | x |   |   |
+|   |   |   |   |   | x | x | x | x |   |
+|   |   |   |   |   |   | x | x | x | x |
+|   |   |   |   |   |   |   | x | x | x |
+|   |   |   |   |   |   |   |   | x | x |
+
+
+---
+
+```python
+def multiply_digits(s: str):
+    ...
+
+# multiply_digits("1234") -> 24
+# multiply_digits("9989") -> 5832
+# multiply_digits("25634893467980356") -> 0
+```
+
+---
+
+p3
+
+2520
+
+- 2520 / 2? O
+
+2520 / 2 = 1260
+
+1260
+
+- 1260 / 2?
